kubernetes/manifests/adguard-sync/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: adguard-sync-sts
  namespace: adguard-sync
spec:
  serviceName: "adguard-sync-service"
  replicas: 1
  selector:
    matchLabels:
      app: adguard-sync
  template:
    metadata:
      labels:
        app: adguard-sync
    spec:
      containers:
      - name: adguard-sync
        image: ghcr.io/bakito/adguardhome-sync
        # The command for a long-running service might be different. 
        # You'll need to know the command to keep the container running
        # and not exit after a single run.
      restartPolicy: Always
